crates/lambda3/tests/snapshots/parser__parse_expr_test@missing_arrow.l3.snap
---
source: crates/lambda3/tests/parser.rs
expression: "(input, parse.errors, node)"
input_file: crates/lambda3/tests/examples/expr/missing_arrow.l3

---
(
    "(\\x  x x) (\\y. y)",
    [
        "expected \'.\', got IDENT",
        "unexpected token IDENT, expected \')\'",
    ],
    ROOT@0..17
      APPLICATION_E@0..17
        PAREN_E@0..9
          L_PAREN@0..1 "("
          LAMBDA_E@1..3
            BACKSLASH@1..2 "\\"
            VAR_P@2..3
              IDENT@2..3 "x"
          ERROR@3..8
            WHITESPACE@3..4 " "
            WHITESPACE@4..5 " "
            IDENT@5..6 "x"
            WHITESPACE@6..7 " "
            IDENT@7..8 "x"
          R_PAREN@8..9 ")"
        EXPR_ARG@9..17
          PAREN_E@9..17
            WHITESPACE@9..10 " "
            L_PAREN@10..11 "("
            LAMBDA_E@11..16
              BACKSLASH@11..12 "\\"
              VAR_P@12..13
                IDENT@12..13 "y"
              DOT@13..14 "."
              VAR_E@14..16
                WHITESPACE@14..15 " "
                IDENT@15..16 "y"
            R_PAREN@16..17 ")"
    ,
)
