crates/lambda3/tests/snapshots/parser__parse_expr_test@missing_binder.l3.snap
---
source: crates/lambda3/tests/parser.rs
expression: "(input, parse.errors, node)"
input_file: crates/lambda3/tests/examples/expr/missing_binder.l3

---
(
    "(\\. x)",
    [
        "expected pattern, got DOT",
    ],
    ROOT@0..6
      PAREN_E@0..6
        L_PAREN@0..1 "("
        LAMBDA_E@1..5
          BACKSLASH@1..2 "\\"
          ERROR@2..2
          DOT@2..3 "."
          VAR_E@3..5
            WHITESPACE@3..4 " "
            IDENT@4..5 "x"
        R_PAREN@5..6 ")"
    ,
)
