crates/lambda3/tests/snapshots/parser__parse_expr_test@simple.l3.snap
---
source: crates/lambda3/tests/parser.rs
expression: "(input, parse.errors, node)"
input_file: crates/lambda3/tests/examples/expr/simple.l3

---
(
    "(\\x. x)",
    [],
    ROOT@0..7
      PAREN_E@0..7
        L_PAREN@0..1 "("
        LAMBDA_E@1..6
          BACKSLASH@1..2 "\\"
          VAR_P@2..3
            IDENT@2..3 "x"
          DOT@3..4 "."
          VAR_E@4..6
            WHITESPACE@4..5 " "
            IDENT@5..6 "x"
        R_PAREN@6..7 ")"
    ,
)
