crates/lambda3/tests/snapshots/parser__parse_expr_test@simple_application.l3.snap
---
source: crates/lambda3/tests/parser.rs
expression: "(input, parse.errors, node)"
input_file: crates/lambda3/tests/examples/expr/simple_application.l3

---
(
    "x x",
    [],
    ROOT@0..3
      APPLICATION_E@0..3
        VAR_E@0..1
          IDENT@0..1 "x"
        EXPR_ARG@1..3
          VAR_E@1..3
            WHITESPACE@1..2 " "
            IDENT@2..3 "x"
    ,
)
